@@ -37,31 +37,47 @@ public class RecipeHelperTest {
 
 	private static List<CraftingRecipe> getCraftingRecipes() {
 		List<CraftingRecipe> craftingRecipes = new ArrayList<>();
-		//stones
-		craftingRecipes.add(new ShapedRecipe(new ResourceLocation("granite_to_diorite"), "", CraftingBookCategory.MISC, 3, 3, ingredients(Items.GRANITE), new ItemStack(Items.DIORITE)));
-		craftingRecipes.add(new ShapelessRecipe(new ResourceLocation("granite_from_diorite"), "", CraftingBookCategory.MISC, new ItemStack(Items.GRANITE, 9), NonNullList.of(Ingredient.EMPTY, Ingredient.of(Items.DIORITE))));
-		craftingRecipes.add(new ShapedRecipe(new ResourceLocation("stone_to_granite"), "", CraftingBookCategory.MISC, 3, 3, ingredients(Items.STONE), new ItemStack(Items.GRANITE)));
-		craftingRecipes.add(new ShapelessRecipe(new ResourceLocation("stone_from_granite"), "", CraftingBookCategory.MISC, new ItemStack(Items.STONE, 9), NonNullList.of(Ingredient.EMPTY, Ingredient.of(Items.GRANITE))));
+		// stones
+		craftingRecipes.add(new ShapedRecipe(new ResourceLocation("granite_to_diorite"), "", CraftingBookCategory.MISC, 3, 3, ingredients(Items.GRANITE),
+				new ItemStack(Items.DIORITE)));
+		craftingRecipes.add(new ShapelessRecipe(new ResourceLocation("granite_from_diorite"), "", CraftingBookCategory.MISC, new ItemStack(Items.GRANITE, 9),
+				NonNullList.of(Ingredient.EMPTY, Ingredient.of(Items.DIORITE))));
+		craftingRecipes.add(new ShapedRecipe(new ResourceLocation("stone_to_granite"), "", CraftingBookCategory.MISC, 3, 3, ingredients(Items.STONE),
+				new ItemStack(Items.GRANITE)));
+		craftingRecipes.add(new ShapelessRecipe(new ResourceLocation("stone_from_granite"), "", CraftingBookCategory.MISC, new ItemStack(Items.STONE, 9),
+				NonNullList.of(Ingredient.EMPTY, Ingredient.of(Items.GRANITE))));
 
-		//gold
-		craftingRecipes.add(new ShapedRecipe(new ResourceLocation("gold_ingot_to_gold_block"), "", CraftingBookCategory.MISC, 3, 3, ingredients(Items.GOLD_INGOT), new ItemStack(Items.GOLD_BLOCK)));
-		craftingRecipes.add(new ShapelessRecipe(new ResourceLocation("gold_ingot_from_gold_block"), "", CraftingBookCategory.MISC, new ItemStack(Items.GOLD_INGOT, 9), NonNullList.of(Ingredient.EMPTY, Ingredient.of(Items.GOLD_BLOCK))));
-		craftingRecipes.add(new ShapedRecipe(new ResourceLocation("gold_nugget_to_gold_ingot"), "", CraftingBookCategory.MISC, 3, 3, ingredients(Items.GOLD_NUGGET), new ItemStack(Items.GOLD_INGOT)));
-		craftingRecipes.add(new ShapelessRecipe(new ResourceLocation("gold_nugget_from_gold_ingot"), "", CraftingBookCategory.MISC, new ItemStack(Items.GOLD_NUGGET, 9), NonNullList.of(Ingredient.EMPTY, Ingredient.of(Items.GOLD_INGOT))));
+		// gold
+		craftingRecipes.add(new ShapedRecipe(new ResourceLocation("gold_ingot_to_gold_block"), "", CraftingBookCategory.MISC, 3, 3,
+				ingredients(Items.GOLD_INGOT), new ItemStack(Items.GOLD_BLOCK)));
+		craftingRecipes.add(new ShapelessRecipe(new ResourceLocation("gold_ingot_from_gold_block"), "", CraftingBookCategory.MISC,
+				new ItemStack(Items.GOLD_INGOT, 9), NonNullList.of(Ingredient.EMPTY, Ingredient.of(Items.GOLD_BLOCK))));
+		craftingRecipes.add(new ShapedRecipe(new ResourceLocation("gold_nugget_to_gold_ingot"), "", CraftingBookCategory.MISC, 3, 3,
+				ingredients(Items.GOLD_NUGGET), new ItemStack(Items.GOLD_INGOT)));
+		craftingRecipes.add(new ShapelessRecipe(new ResourceLocation("gold_nugget_from_gold_ingot"), "", CraftingBookCategory.MISC,
+				new ItemStack(Items.GOLD_NUGGET, 9), NonNullList.of(Ingredient.EMPTY, Ingredient.of(Items.GOLD_INGOT))));
 
-		//hollow 3x3 reversible compression
-		craftingRecipes.add(new ShapedRecipe(new ResourceLocation("charcoal_to_coal_hollow"), "", CraftingBookCategory.MISC, 3, 3, hollowIngredients(Items.CHARCOAL), new ItemStack(Items.COAL)));
-		craftingRecipes.add(new ShapelessRecipe(new ResourceLocation("charcoal_from_coal"), "", CraftingBookCategory.MISC, new ItemStack(Items.CHARCOAL, 8), NonNullList.of(Ingredient.EMPTY, Ingredient.of(Items.COAL))));
+		// hollow 3x3 reversible compression
+		craftingRecipes.add(new ShapedRecipe(new ResourceLocation("charcoal_to_coal_hollow"), "", CraftingBookCategory.MISC, 3, 3,
+				hollowIngredients(Items.CHARCOAL), new ItemStack(Items.COAL)));
+		craftingRecipes.add(new ShapelessRecipe(new ResourceLocation("charcoal_from_coal"), "", CraftingBookCategory.MISC, new ItemStack(Items.CHARCOAL, 8),
+				NonNullList.of(Ingredient.EMPTY, Ingredient.of(Items.COAL))));
 
-
-		//confusion recipes
-		craftingRecipes.add(new ShapedRecipe(new ResourceLocation("gold_nugget_to_diorite"), "", CraftingBookCategory.MISC, 3, 3, ingredients(Items.GOLD_NUGGET), new ItemStack(Items.DIORITE)));
-		craftingRecipes.add(new ShapedRecipe(new ResourceLocation("granite_to_gold_block"), "", CraftingBookCategory.MISC, 3, 3, ingredients(Items.GRANITE), new ItemStack(Items.GOLD_BLOCK)));
-		craftingRecipes.add(new ShapelessRecipe(new ResourceLocation("gold_nugget_from_granite"), "", CraftingBookCategory.MISC, new ItemStack(Items.GOLD_NUGGET, 9), NonNullList.of(Ingredient.EMPTY, Ingredient.of(Items.GRANITE))));
-		craftingRecipes.add(new ShapelessRecipe(new ResourceLocation("granite_from_diamond"), "", CraftingBookCategory.MISC, new ItemStack(Items.GRANITE, 9), NonNullList.of(Ingredient.EMPTY, Ingredient.of(Items.DIAMOND))));
-		craftingRecipes.add(new ShapelessRecipe(new ResourceLocation("iron_nugget_from_granite"), "", CraftingBookCategory.MISC, new ItemStack(Items.IRON_NUGGET, 9), NonNullList.of(Ingredient.EMPTY, Ingredient.of(Items.GRANITE))));
-		craftingRecipes.add(new ShapelessRecipe(new ResourceLocation("stone_from_gold_ingot"), "", CraftingBookCategory.MISC, new ItemStack(Items.STONE, 9), NonNullList.of(Ingredient.EMPTY, Ingredient.of(Items.GOLD_INGOT))));
-		craftingRecipes.add(new ShapelessRecipe(new ResourceLocation("torches_from_gold_block"), "", CraftingBookCategory.MISC, new ItemStack(Items.TORCH, 9), NonNullList.of(Ingredient.EMPTY, Ingredient.of(Items.GOLD_BLOCK))));
+		// confusion recipes
+		craftingRecipes.add(new ShapedRecipe(new ResourceLocation("gold_nugget_to_diorite"), "", CraftingBookCategory.MISC, 3, 3,
+				ingredients(Items.GOLD_NUGGET), new ItemStack(Items.DIORITE)));
+		craftingRecipes.add(new ShapedRecipe(new ResourceLocation("granite_to_gold_block"), "", CraftingBookCategory.MISC, 3, 3, ingredients(Items.GRANITE),
+				new ItemStack(Items.GOLD_BLOCK)));
+		craftingRecipes.add(new ShapelessRecipe(new ResourceLocation("gold_nugget_from_granite"), "", CraftingBookCategory.MISC,
+				new ItemStack(Items.GOLD_NUGGET, 9), NonNullList.of(Ingredient.EMPTY, Ingredient.of(Items.GRANITE))));
+		craftingRecipes.add(new ShapelessRecipe(new ResourceLocation("granite_from_diamond"), "", CraftingBookCategory.MISC, new ItemStack(Items.GRANITE, 9),
+				NonNullList.of(Ingredient.EMPTY, Ingredient.of(Items.DIAMOND))));
+		craftingRecipes.add(new ShapelessRecipe(new ResourceLocation("iron_nugget_from_granite"), "", CraftingBookCategory.MISC,
+				new ItemStack(Items.IRON_NUGGET, 9), NonNullList.of(Ingredient.EMPTY, Ingredient.of(Items.GRANITE))));
+		craftingRecipes.add(new ShapelessRecipe(new ResourceLocation("stone_from_gold_ingot"), "", CraftingBookCategory.MISC, new ItemStack(Items.STONE, 9),
+				NonNullList.of(Ingredient.EMPTY, Ingredient.of(Items.GOLD_INGOT))));
+		craftingRecipes.add(new ShapelessRecipe(new ResourceLocation("torches_from_gold_block"), "", CraftingBookCategory.MISC, new ItemStack(Items.TORCH, 9),
+				NonNullList.of(Ingredient.EMPTY, Ingredient.of(Items.GOLD_BLOCK))));
 
 		return craftingRecipes;
 	}
@@ -120,19 +136,13 @@ public class RecipeHelperTest {
 	}
 
 	private static NonNullList<Ingredient> ingredients(Item item) {
-		return NonNullList.of(Ingredient.EMPTY,
-				Ingredient.of(item), Ingredient.of(item), Ingredient.of(item),
-				Ingredient.of(item), Ingredient.of(item), Ingredient.of(item),
-				Ingredient.of(item), Ingredient.of(item), Ingredient.of(item)
-		);
+		return NonNullList.of(Ingredient.EMPTY, Ingredient.of(item), Ingredient.of(item), Ingredient.of(item), Ingredient.of(item), Ingredient.of(item),
+				Ingredient.of(item), Ingredient.of(item), Ingredient.of(item), Ingredient.of(item));
 	}
 
 	private static NonNullList<Ingredient> hollowIngredients(Item item) {
-		return NonNullList.of(Ingredient.EMPTY,
-				Ingredient.of(item), Ingredient.of(item), Ingredient.of(item),
-				Ingredient.of(item), Ingredient.EMPTY, Ingredient.of(item),
-				Ingredient.of(item), Ingredient.of(item), Ingredient.of(item)
-		);
+		return NonNullList.of(Ingredient.EMPTY, Ingredient.of(item), Ingredient.of(item), Ingredient.of(item), Ingredient.of(item), Ingredient.EMPTY,
+				Ingredient.of(item), Ingredient.of(item), Ingredient.of(item), Ingredient.of(item));
 	}
 
 	@AfterEach
@@ -145,20 +155,18 @@ public class RecipeHelperTest {
 	void getCompactingResultReturnsResultForFullThreeByThreeShape(Level level, Item item, RecipeHelper.CompactingResult expectedResult) {
 		RecipeHelper.setLevel(level);
 
-		RecipeHelper.CompactingResult actualResult = RecipeHelper.getCompactingResult(new ItemStack(item), RecipeHelper.CompactingShape.THREE_BY_THREE_UNCRAFTABLE);
+		RecipeHelper.CompactingResult actualResult = RecipeHelper.getCompactingResult(new ItemStack(item),
+				RecipeHelper.CompactingShape.THREE_BY_THREE_UNCRAFTABLE);
 
 		assertCompactingResultEquals(expectedResult, actualResult, "getCompactingResult returned wrong result");
 	}
 
 	static Stream<Arguments> getCompactingResultReturnsResultForFullThreeByThreeShape() {
 		return withClassParams(
-				List.of(
-						Arguments.of(Items.GOLD_INGOT, new RecipeHelper.CompactingResult(new ItemStack(Items.GOLD_BLOCK), Collections.emptyList())),
+				List.of(Arguments.of(Items.GOLD_INGOT, new RecipeHelper.CompactingResult(new ItemStack(Items.GOLD_BLOCK), Collections.emptyList())),
 						Arguments.of(Items.GOLD_NUGGET, new RecipeHelper.CompactingResult(new ItemStack(Items.GOLD_INGOT), Collections.emptyList())),
 						Arguments.of(Items.GRANITE, new RecipeHelper.CompactingResult(new ItemStack(Items.DIORITE), Collections.emptyList())),
-						Arguments.of(Items.STONE, new RecipeHelper.CompactingResult(new ItemStack(Items.GRANITE), Collections.emptyList()))
-				)
-		);
+						Arguments.of(Items.STONE, new RecipeHelper.CompactingResult(new ItemStack(Items.GRANITE), Collections.emptyList()))));
 	}
 
 	@ParameterizedTest
@@ -168,7 +176,8 @@ public class RecipeHelperTest {
 
 		RecipeHelper.CompactingResult actualResult = RecipeHelper.getCompactingResult(new ItemStack(Items.CHARCOAL), getHollowThreeByThreeShape());
 
-		assertCompactingResultEquals(new RecipeHelper.CompactingResult(new ItemStack(Items.COAL), Collections.emptyList()), actualResult, "getCompactingResult returned wrong result for masked shape");
+		assertCompactingResultEquals(new RecipeHelper.CompactingResult(new ItemStack(Items.COAL), Collections.emptyList()), actualResult,
+				"getCompactingResult returned wrong result for masked shape");
 	}
 
 	static Stream<Arguments> getCompactingResultReturnsResultForDonutShape() {
@@ -213,7 +222,6 @@ public class RecipeHelperTest {
 		return RecipeHelper.CompactingRecipeShape.parse("111/101/111").orElseThrow();
 	}
 
-
 	@ParameterizedTest
 	@MethodSource
 	void getUncompactingResultReturnsExpectedResult(Level level, Item item, RecipeHelper.UncompactingResult expectedResult) {
@@ -225,14 +233,15 @@ public class RecipeHelperTest {
 	}
 
 	static Stream<Arguments> getUncompactingResultReturnsExpectedResult() {
-		return withClassParams(
-				List.of(
-						Arguments.of(Items.GOLD_BLOCK, new RecipeHelper.UncompactingResult(new ItemStack(Items.GOLD_INGOT), RecipeHelper.CompactingShape.THREE_BY_THREE_UNCRAFTABLE)),
-						Arguments.of(Items.GOLD_INGOT, new RecipeHelper.UncompactingResult(new ItemStack(Items.GOLD_NUGGET), RecipeHelper.CompactingShape.THREE_BY_THREE_UNCRAFTABLE)),
-						Arguments.of(Items.DIORITE, new RecipeHelper.UncompactingResult(new ItemStack(Items.GRANITE), RecipeHelper.CompactingShape.THREE_BY_THREE_UNCRAFTABLE)),
-						Arguments.of(Items.GRANITE, new RecipeHelper.UncompactingResult(new ItemStack(Items.STONE), RecipeHelper.CompactingShape.THREE_BY_THREE_UNCRAFTABLE))
-				)
-		);
+		return withClassParams(List.of(
+				Arguments.of(Items.GOLD_BLOCK,
+						new RecipeHelper.UncompactingResult(new ItemStack(Items.GOLD_INGOT), RecipeHelper.CompactingShape.THREE_BY_THREE_UNCRAFTABLE)),
+				Arguments.of(Items.GOLD_INGOT,
+						new RecipeHelper.UncompactingResult(new ItemStack(Items.GOLD_NUGGET), RecipeHelper.CompactingShape.THREE_BY_THREE_UNCRAFTABLE)),
+				Arguments.of(Items.DIORITE,
+						new RecipeHelper.UncompactingResult(new ItemStack(Items.GRANITE), RecipeHelper.CompactingShape.THREE_BY_THREE_UNCRAFTABLE)),
+				Arguments.of(Items.GRANITE,
+						new RecipeHelper.UncompactingResult(new ItemStack(Items.STONE), RecipeHelper.CompactingShape.THREE_BY_THREE_UNCRAFTABLE))));
 	}
 
 	@ParameterizedTest
@@ -243,36 +252,25 @@ public class RecipeHelperTest {
 		Set<RecipeHelper.CompactingShape> actualShapes = RecipeHelper.getItemCompactingShapes(new ItemStack(item));
 
 		if (!Objects.equals(shapes, actualShapes)) {
-			assertionFailure().message("getItemCompactingShapes returned wrong result")
-					.expected(shapes)
-					.actual(actualShapes)
-					.buildAndThrow();
+			assertionFailure().message("getItemCompactingShapes returned wrong result").expected(shapes).actual(actualShapes).buildAndThrow();
 		}
 	}
 
 	static Stream<Arguments> getItemCompactingShapesReturnsExpectedShapes() {
-		return withClassParams(
-				List.of(
-						Arguments.of(Items.GOLD_INGOT, Set.of(RecipeHelper.CompactingShape.THREE_BY_THREE_UNCRAFTABLE)),
-						Arguments.of(Items.GOLD_NUGGET, Set.of(RecipeHelper.CompactingShape.THREE_BY_THREE_UNCRAFTABLE)),
-						Arguments.of(Items.GRANITE, Set.of(RecipeHelper.CompactingShape.THREE_BY_THREE_UNCRAFTABLE)),
-						Arguments.of(Items.STONE, Set.of(RecipeHelper.CompactingShape.THREE_BY_THREE_UNCRAFTABLE))
-				)
-		);
+		return withClassParams(List.of(Arguments.of(Items.GOLD_INGOT, Set.of(RecipeHelper.CompactingShape.THREE_BY_THREE_UNCRAFTABLE)),
+				Arguments.of(Items.GOLD_NUGGET, Set.of(RecipeHelper.CompactingShape.THREE_BY_THREE_UNCRAFTABLE)),
+				Arguments.of(Items.GRANITE, Set.of(RecipeHelper.CompactingShape.THREE_BY_THREE_UNCRAFTABLE)),
+				Arguments.of(Items.STONE, Set.of(RecipeHelper.CompactingShape.THREE_BY_THREE_UNCRAFTABLE))));
 	}
 
 	private static void assertCompactingResultEquals(RecipeHelper.CompactingResult expected, RecipeHelper.CompactingResult actual, Object message) {
-		if (ItemStack.matches(expected.getResult(), actual.getResult())
-				&& areItemListsEqual(expected.getRemainingItems(), actual.getRemainingItems())) {
+		if (ItemStack.matches(expected.getResult(), actual.getResult()) && areItemListsEqual(expected.getRemainingItems(), actual.getRemainingItems())) {
 			return;
 		}
 
-		assertionFailure().message(message)
-				.expected(expected.getResult() + ":" + expected.getRemainingItems())
-				.actual(actual.getResult() + ":" + actual.getRemainingItems())
-				.buildAndThrow();
+		assertionFailure().message(message).expected(expected.getResult() + ":" + expected.getRemainingItems())
+				.actual(actual.getResult() + ":" + actual.getRemainingItems()).buildAndThrow();
 	}
-
 
 	private static boolean areItemListsEqual(List<ItemStack> expected, List<ItemStack> actual) {
 		if (expected.size() != actual.size()) {
@@ -286,12 +284,11 @@ public class RecipeHelperTest {
 		return true;
 	}
 	private static void assertUncompactingResultEquals(RecipeHelper.UncompactingResult expected, RecipeHelper.UncompactingResult actual, Object message) {
-		if (ItemHandlerHelper.canItemStacksStack(expected.getResult(), actual.getResult()) && expected.getCompactUsingShape() == actual.getCompactUsingShape()) {
+		if (ItemHandlerHelper.canItemStacksStack(expected.getResult(), actual.getResult())
+				&& expected.getCompactUsingShape() == actual.getCompactUsingShape()) {
 			return;
 		}
-		assertionFailure().message(message)
-				.expected(expected.getResult() + ":" + expected.getCompactUsingShape())
-				.actual(actual.getResult() + ":" + actual.getCompactUsingShape())
-				.buildAndThrow();
+		assertionFailure().message(message).expected(expected.getResult() + ":" + expected.getCompactUsingShape())
+				.actual(actual.getResult() + ":" + actual.getCompactUsingShape()).buildAndThrow();
 	}
 }
